Bug 363673 - Popup menu - Create New - Link to Application does nothing useful
Summary: Popup menu - Create New - Link to Application does nothing useful
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
: 356198 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-29 17:26 UTC by Jonathan Marten
Modified: 2016-07-24 09:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2016-05-29 17:26:20 UTC
This is using the Folder View desktop containment.  The desktop popup menu contains Create New - Link to Application... but selecting this action does nothing useful.

The initial dialogue displayed is titled "Properties for Program.desktop - Plasma" and looks very much like the standard file properties dialogue, but it only has the "General" and "Permissions" tabs.  The "General" tab has "Link to Application" in the name line edit and "Location" shows ":/kio5/newfile-templates/.source".  The "Permissions" tab shows mode 7777.  There seems to be nowhere to select an application or enter a command line.

Leaving all the fields as default and clicking on "OK" shows the error message "The file or folder :/kio5/newfile-templates/.source/Program.desktop does not exist" and nothing is created on the desktop.


Reproducible: Always

Steps to Reproduce:
1.  From the desktop popup menu, select Create New - Link to Application.
2.  Observe dialogue appearance as above.
3.  Click "OK".
4.  Observe error message as above.
Comment 1 Jonathan Marten 2016-05-29 17:28:05 UTC
The same happens if this action is executed from a folder popup menu in Dolphin or Konqueror.  So this may not be a Plasma desktop problem, please reassign if necessary.
Comment 2 Tony 2016-07-17 06:37:28 UTC
Can confirm this is present and occurs exactly as described on kde neon 5.7.1.
Comment 3 Wolfgang Bauer 2016-07-18 20:27:36 UTC
Isn't this the same as bug#356198?
Comment 4 David Faure 2016-07-22 22:01:48 UTC
Git commit 525232d30ee682de4778667c8244778b50620e67 by David Faure, on behalf of Chinmoy Ranjan Pradhan.
Committed on 22/07/2016 at 22:01.
Pushed by dfaure into branch 'master'.

KNewFileMenu: Fix creating link to application

This was broken since the switch to resource files as input files.
KPropertiesDialog does not support that, so a temp file has to be created first
(and deleted when the properties dialog is closed)
FIXED-IN: 5.25
REVIEW: 128501

M  +33   -4    src/filewidgets/knewfilemenu.cpp
M  +1    -0    src/filewidgets/knewfilemenu.h

http://commits.kde.org/kio/525232d30ee682de4778667c8244778b50620e67
Comment 5 Wolfgang Bauer 2016-07-24 09:57:23 UTC
*** Bug 356198 has been marked as a duplicate of this bug. ***