KNewFileMenu: Fix creating link to application

This was broken since the switch to resource files as input files.
KPropertiesDialog does not support that, so a temp file has to be created first
(and deleted when the properties dialog is closed)

BUG: 363673
FIXED-IN: 5.25
REVIEW: 128501