src/filewidgets/knewfilemenu.h
@@ -170,6 +170,7 @@ private:
     Q_PRIVATE_SLOT(d, void _k_slotCreateHiddenDirectory())
     Q_PRIVATE_SLOT(d, void _k_slotFillTemplates())
     Q_PRIVATE_SLOT(d, void _k_slotOtherDesktopFile())
+    Q_PRIVATE_SLOT(d, void _k_slotOtherDesktopFileClosed())
     Q_PRIVATE_SLOT(d, void _k_slotRealFileOrDir())
     Q_PRIVATE_SLOT(d, void _k_slotTextChanged(const QString))
     Q_PRIVATE_SLOT(d, void _k_slotSymLink())
